--- a/package.json
+++ b/package.json
@@ -1,16 +1,39 @@
+
 {
   "name": "helo",
-  "version": "1.0.0",
-  "description": "Kurasawa Bot Repositories",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "Kurasawa Bot Reposietories",
+  "main": "pais.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Xlaaf/helo.git"
+  },
+  "keywords": [
+    "bot",
+    "telegram",
+    "telegraf",
+    "telebot"
+  ],
+  "author": "Xlaaf",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/Xlaaf/helo/issues"
+  },
+  "homepage": "https://github.com/Xlaaf/helo#readme",
   "dependencies": {
-    "telegraf": "^3.32.0"
-     "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "extra": "^0.2.1",
+    "markup": "0.0.4",
+    "moment-timezone": "^0.5.33",
+    "nodemon": "^2.0.7",
+    "os": "^0.1.1",
+    "performance-now": "^2.1.0",
+    "telegraf": "^4.0.3",
+    "telegraf-inline-menu": "^6.1.0",
+    "telegraf-update-logger": "^1.4.0"
   }
 }
